Extended the C++ backend with Boost-powered helpers for zero inclusion, emptiness detection, subset/proper-subset checks, radius, mag/mig, and distance while handling NA intervals and recycling. Added R-facing wrappers with roxygen docs, aligning units automatically and keeping outputs as units vectors or logicals; regenerated exports and documentation. Expanded test-math.R with diagnostics, radius/mag/mig, and distance coverage, adjusting expectations to reflect vectorised results. Updated the vignette’s summary section to showcase the new helpers in practice. Refreshed the Boost parity checklist to mark the completed/partial items.

--- a/vignettes/boostedintervals.Rmd
+++ b/vignettes/boostedintervals.Rmd
@@ -146,12 +146,20 @@ hull
 
 ## Visualization-ready summaries
 
-Utilities such as `width()` and `midpoint()` return `units` vectors that can be
-fed directly into plotting pipelines or summary tables.
+Utilities such as `width()`, `midpoint()`, `radius()`, `mag()`, `mig()`, and
+`distance()` return `units` vectors that can be fed directly into plotting
+pipelines or summary tables, while `zero_in()` surfaces Boost's diagnostic for
+intervals spanning zero.
 
 ```{r}
 width(sum_interval)
 midpoint(other_width)
+
+radius(sum_interval)
+mag(direction)
+mig(direction)
+distance(width_a, width_b)
+zero_in(direction)
 ```
 
 ## Next steps
