Fixes for interval powers, nth_root, unit handling, and tests
This commit addresses several issues discovered while implementing 'Core Construction & Arithmetic' parity with Boost interval routines:

- C++: Wrapped Boost nth_root calls and mapped empty-interval/exception cases to NA bounds to avoid throwing C++ exceptions into R when roots do not exist (e.g., even root of strictly-negative intervals).
- C++: Improved numeric power handling for non-integer exponents by using exp(log(base)*exp) with careful checks for zero and sign; retained integer fast-path via repeated squaring.
- R: Improved  unit derivation by decomposing symbolic unit numerator/denominator exponents and constructing integer-based unit strings (avoids passing fractional unit exponents to udunits which often fails).
- R: Added @details note in  docs advising users to parenthesize fractional exponents (x^(1/3)) because R parses  as .
- Tests: Added explicit tests for:
  * nth_root unit case (m^3 -> m)
  * even-root negative-only intervals returning NA bounds
  * fractional exponent parenthesization vs numeric literal equivalence
- Misc: S3 accessor and class tweaks to  to aid extraction during unit handling.

Notes from R CMD check (run locally): warnings about compiled object files present in  and unbuilt vignettes were observed. These are environment artifacts from local builds; they should be cleaned before preparing a source tarball for CRAN (remove compiled .o/.so files and build vignettes into ).

Ticket/Issue references: N/A (local development iteration)

--- a/vignettes/boostedintervals.Rmd
+++ b/vignettes/boostedintervals.Rmd
@@ -180,8 +180,13 @@ mig(direction)
 distance(width_a, width_b)
 zero_in(direction)
 
+pow_interval(units_interval(set_units(1, "m^2"), set_units(9, "m^2")), 0.5)
+nth_root(units_interval(set_units(1, "m^4"), set_units(16, "m^4")), 4)
+pow1p(direction, 3)
+
 bisect(other_width)
 inflate(sum_interval, absolute = set_units(0.1, "m"))
+hull(sum_interval, other_width, empty_interval(unit = "m"), na.rm = TRUE)
 ```
 
 ## Next steps
