--- a/vignettes/boostedintervals.Rmd
+++ b/vignettes/boostedintervals.Rmd
@@ -47,6 +47,16 @@ as_units_interval(3, unit = "cm")
 as_units_interval(set_units(1:3, "s"))
 ```
 
+## Numeric types and integer semantics
+
+Note: Boost.Interval supports both integer and real interval types at the C++
+level. This package, however, assumes real (double) interval endpoints for all
+operations because unit conversions and the `units` package are defined for
+reals. Integer-specific behaviours (discrete wrapping, overflow semantics,
+or other integer-only rules) are not modelled by the R wrappers. If you need
+integer-typed interval semantics, use Boost directly or extend the C++ layer.
+
+
 ## Arithmetic and unit propagation
 
 Standard arithmetic operators reuse Boost's interval arithmetic while keeping
