--- a/vignettes/finance-intervals.Rmd
+++ b/vignettes/finance-intervals.Rmd
@@ -13,6 +13,21 @@ library(boostedintervals)
 # finance examples use dimensionless rates (unit = "1")
 ```
 
+```{r percent-helper, echo=TRUE}
+# Helper: create a dimensionless interval from percent-style inputs.
+# Accepts numbers provided as percentages (e.g. 3 meaning 3%) or as decimals
+# (e.g. 0.03). If values look like percentages (> 1) they are divided by 100.
+percent_interval <- function(lo, hi) {
+  if (is.numeric(lo) && is.numeric(hi) && max(lo, hi, na.rm = TRUE) > 1) {
+    # treat as percent values like 3 -> 3%
+    return(units_interval(lo / 100, hi / 100, unit = "1"))
+  }
+  # already decimal fractions
+  units_interval(lo, hi, unit = "1")
+}
+
+```
+
 ## Motivation
 
 Financial inputs like interest rates or returns are often uncertain. Intervals
@@ -25,12 +40,35 @@ Principal grows by an uncertain annual return `r` for `n` years:
 \[ FV = P (1 + r)^n \]
 
 ```{r}
+n <- 5
 P <- units_interval(1000, 1000, unit = "1")  # unitless money placeholder
-r <- units_interval(0.03, 0.05, unit = "1")   # 3% to 5%
+# Use percent_interval to allow human-friendly percentage inputs (3 -> 3%).
+r <- percent_interval(3, 5)   # 3% to 5%
+n <- 5
 n <- 5
 
 fv <- P * (1 + r)^n
 as_numeric_bounds(fv)
+```
+
+## Using user-defined currency units
+
+The `units` package allows defining custom units. We'll register a simple
+`USD` unit and attach it to principal and future-value intervals so outputs
+carry currency metadata.
+
+```{r}
+# Register a symbolic USD unit for demonstration (safe to call repeatedly)
+if (!"USD" %in% units::valid_udunits()) {
+  try({ units::install_unit("USD") }, silent = TRUE)
+}
+
+P_usd <- units_interval(units::set_units(1000, "USD"), units::set_units(1000, "USD"))
+# Reuse the percent helper so readers can supply 3/5 rather than 0.03/0.05
+r <- percent_interval(3, 5)
+fv_usd <- P_usd * (1 + r)^n
+fv_usd
+as_numeric_bounds(fv_usd, unit = "USD")
 ```
 
 ## Decision thresholds
