--- a/vignettes/fermi-pizza.Rmd
+++ b/vignettes/fermi-pizza.Rmd
@@ -53,7 +53,10 @@ pizzas_per_person_year <- units_interval(set_units(40, "pizza/(people*year)"), s
 # Area per pizza box (assuming 12-inch diameter pizza)
 # Box is roughly square, about 14 inches x 14 inches
 box_side <- units_interval(set_units(13, "inch"), set_units(15, "inch"))
-box_area <- box_side * box_side
+box_area <- units_interval(
+  set_units(box_side$lower * box_side$lower, "inch^2/pizza"),
+  set_units(box_side$upper * box_side$upper, "inch^2/pizza")
+)
 
 print(us_population)
 print(pizzas_per_person_year)
@@ -68,10 +71,10 @@ Now let's perform the calculation step by step:
 # Total pizzas per year (rate)
 total_pizzas_rate <- us_population * pizzas_per_person_year
 
-# Total pizzas in one year
+# Total pizzas in one year (dimensionless count)
 total_pizzas <- total_pizzas_rate * units_interval(set_units(1, "year"), set_units(1, "year"))
 
-# Total area covered
+# Total area covered (pizza units cancel naturally)
 total_area <- total_pizzas * box_area
 
 print(total_area)
@@ -79,21 +82,14 @@ print(total_area)
 
 ## Converting to More Meaningful Units
 
-Since we're using custom units for counting pizzas, let's show the total area in square inches per pizza and then convert to square kilometers:
+Since the total number of pizzas is dimensionless (just a count), the total area is correctly in square inches. Let's convert to square kilometers:
 
 ```{r conversion}
-# Area per pizza in square inches
-area_per_pizza_in2 <- box_area
-print("Area per pizza box:")
-print(area_per_pizza_in2)
+# Convert total area to square kilometers
+total_area_lower_km2 <- set_units(total_area$lower, "km^2")
+total_area_upper_km2 <- set_units(total_area$upper, "km^2")
+total_area_km2 <- units_interval(total_area_lower_km2, total_area_upper_km2)
 
-# Convert to square kilometers
-area_per_pizza_km2 <- units_interval(set_units(box_area$lower, "km^2"), set_units(box_area$upper, "km^2"))
-print("Area per pizza box in km²:")
-print(area_per_pizza_km2)
-
-# Total area in km² (same as total pizzas * area per pizza)
-total_area_km2 <- total_pizzas * area_per_pizza_km2
 print("Total area covered:")
 print(total_area_km2)
 ```
